--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/index.html
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>llm-product-recommandation-chat</title>
+      <!-- Start of HubSpot Embed Code -->
+      <!-- End of HubSpot Embed Code -->
   </head>
   <body>
     <div id="root"></div>
